UPDATE POST Systemctl
	modified:   _posts/2017-03-02-systemd.md

--- a/_posts/2017-03-02-systemd.md
+++ b/_posts/2017-03-02-systemd.md
@@ -81,6 +81,10 @@ Deberiamos tener por respuesta algo como esto
 
 Le diremos a **systemd** que inicie nuestra aplicacion en *NodeJs* junto con el sistema operativo
 
-	sudo systemctl enable cloud9	
+	sudo systemctl enable cloud9
+
+Si luego quieres que **no inicie** 
+
+    sudo systemctl disable cloud9	
 
 Lectura Recomendada: [How To Use Systemctl to Manage Systemd Services and Units ](https://www.digitalocean.com/community/tutorials/how-to-use-systemctl-to-manage-systemd-services-and-units)
