--- a/_posts/2017-03-12-ssl.md
+++ b/_posts/2017-03-12-ssl.md
@@ -3,7 +3,7 @@ layout: post
 title: "Certificado SSL"
 image: img2.png
 video: false
-published: false
+published: true
 ---
 
 Habilitando SSL en apache 
@@ -27,13 +27,21 @@ openssl req -new -key server.key -out server.csr
 
 
 Nos preguntara:
-Country Name (2 letter code): Código de país en formato ISO de dos letras.
-State or Province Name (full name): Estado o provincia.
-Locality Name: Localidad o ciudad.
-Organization Name : Nombre de la organización.
-Organizational Unit Name : Sector de la organización.
-Common Name: igual al del server Name de la configuracion del vhost
-Email Address: Un mail
+
+`Country Name (2 letter code)` : Código de país en formato ISO de dos letras.
+
+`State or Province Name (full name)` : Estado o provincia.
+
+`Locality Name` : Localidad o ciudad.
+
+`Organization Name` : Nombre de la organización.
+
+`Organizational Unit Name` : Sector de la organización.
+
+`Common Name` : igual al del server Name de la configuracion del vhost
+
+`Email Address` : Un mail
+
 
 Generando el certificado SSL (.crt)
 Necesitaremos el .key y el .csr generados anteriormente
@@ -41,6 +49,11 @@ Necesitaremos el .key y el .csr generados anteriormente
 openssl x509 -req -days 365 -in server.csr -signkey server.key -out server.crt
 {% endhighlight %}
 El parámetro days sirve para definir la fecha de expiración del certificado.
+
+Movemos el `*.crt` y el `*.key` al directorio `/etc/apache2/ssl/`
+
+Modificar los permisos `sudo chmod 600 /etc/apache2/ssl/*`
+
 
 Habilitanos el módulo en Apache
 {% highlight Bash %}
@@ -50,8 +63,9 @@ service apache2 restart
 
 
 
-Aditamos el VirtualHost de apache
-{% highlight Apache %}
+Editamos el VirtualHost de apache
+
+{% highlight Apache linenos%}
 
 <VirtualHost *:443>
     ServerName check.sitio.local
@@ -75,10 +89,11 @@ Aditamos el VirtualHost de apache
 {% endhighlight %}
 
 Importante
-- :443
-- SSLEngine on
-- SSLCertificateKeyFile
-- SSLCertificateFile
+
+- Linea 1 : cambiar `:80` por `:443`
+- Linea 5 : agregar `SSLEngine on`
+- Linea 6 : agregar `SSLCertificateKeyFile`
+- Linea 7 : agregar `SSLCertificateFile`
 
 Reiniciamos Servidor
 
