--- a/_posts/2017-08-01-eslint.md
+++ b/_posts/2017-08-01-eslint.md
@@ -21,34 +21,41 @@ En sublimeText3 debes acceder a preferencias -> Package Control -> Install Packa
 
 Busca e instala `SublimeLinter-contrib-eslint`
 
-###### Crear el archivo `.eslintrc` de forma manual
+###### Crear el archivo `.eslintrc.js` de forma manual
 {% highlight JavaScript %}
-{
-  "extends": "airbnb",
-  "parser": "babel-eslint",
-  "plugins": [
-    "import",
-    "jsx-a11y",
-    "react"
-  ],
-  "env": {
-    "browser": true,
-    "node": true
-  },
-  "rules": {
-    "global-require": 0,
-    "comma-dangle": 0,
-    "arrow-body-style": 0,
-    "space-before-function-paren": 0,
-    "import/no-extraneous-dependencies": 0,
-    "react/jsx-filename-extension": 1,
-    "react/forbid-prop-types": 1,
-    "jsx-a11y/anchor-has-content": 0
-  }
-}
+module.exports = {
+    "env": {
+        "browser": true,
+        "commonjs": true,
+        "es6": true,
+        "jquery": true
+    },
+    "extends": "eslint:recommended",
+    "parserOptions": {
+        "sourceType": "module"
+    },
+    "rules": {
+        "indent": [
+            "error",
+            4
+        ],
+        "linebreak-style": [
+            "error",
+            "unix"
+        ],
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "semi": [
+            "error",
+            "always"
+        ]
+    }
+};
 {% endhighlight %}
 
-###### Crear el archivo `.eslintrc` con npm
-Puedes tipear  `eslint --init` y te haran una serie de preguntas y en base a estas respuestas se genera un archivo `.eslintrc`.
+###### Crear el archivo `.eslintrc.js` con npm
+Puedes tipear  `eslint --init` y te haran una serie de preguntas y en base a estas respuestas se genera un archivo `.eslintrc.js`.
 
-En ambos casos, tanto para la creación manual como para el archivo generado por terminal, bastara con poner el archivo `.eslintrc` en la raiz del proyecto y reiniciar nuestro editor para que el linter empiece a aplicar las reglas.
+En ambos casos, tanto para la creación manual como para el archivo generado por terminal, bastara con poner el archivo `.eslintrc.js` en la raiz del proyecto y reiniciar nuestro editor para que el linter empiece a aplicar las reglas.
