--- a/_posts/2017-08-01-eslint.md
+++ b/_posts/2017-08-01-eslint.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Instalar ESLint en SublimeText3"
-image: android.jpg
+image: eslint.png
 ---
 
 Controla es estilo de tu código
