UPDATE Post XHR
 Changes to be committed:
	modified:   _posts/2017-11-18-xhr.md

--- a/_posts/2017-11-18-xhr.md
+++ b/_posts/2017-11-18-xhr.md
@@ -31,7 +31,9 @@ xhr.onreadystatechange = function(dump){
 
     // Evaluamos el estado de la petición, cuando sea === 4 (complete)
     if (xhr.readyState === 4) {
+        // Validando que recibamos un responseText
         if(this.responseText !== '' ){
+            // Convirtiendo el JSON a Objeto
             var res = JSON.parse(this.responseText);
             console.log(res)
         }
@@ -41,4 +43,15 @@ xhr.onreadystatechange = function(dump){
 
 // Enviamos la petición
 xhr.send();
+{% endhighlight %}  
+
+
+También podemos validar el `status` retornado por el servidor, bastara con poner después de la validación del `readyState` lo siguiente:
+
+{% highlight Javascript %}
+if (xhr.readyState === 4) {
+    if (xhr.status === 200) {
+        // Instrucciones
+    }
+}
 {% endhighlight %}  
